--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "@google/genai": "^1.29.1",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
+    "cookie-parser": "^1.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^17.2.3",
+    "bcrypt": "^6.0.0",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
